--- a/lab-2/ml-2-case-study-key.html
+++ b/lab-2/ml-2-case-study-key.html
@@ -9,7 +9,7 @@
 <meta name="author" content="LASER Institute">
 <meta name="dcterms.date" content="2024-07-15">
 
-<title>Predicting Student Success</title>
+<title>Who Drops Online Courses?</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -159,7 +159,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Predicting Student Success</h1>
+<h1 class="title">Who Drops Online Courses?</h1>
 <p class="subtitle lead">ML Module 2: Case Study Key</p>
 </div>
 
