--- a/module-4/sml-4-badge.html
+++ b/module-4/sml-4-badge.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="LASER Institute">
-<meta name="dcterms.date" content="2024-07-19">
+<meta name="dcterms.date" content="2024-07-20">
 
 <title>Feature Engineering Activity Types</title>
 <style>
@@ -78,7 +78,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">July 19, 2024</p>
+      <p class="date">July 20, 2024</p>
     </div>
   </div>
   
@@ -120,6 +120,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="part-ii-data-product" class="level3">
 <h3 class="anchored" data-anchor-id="part-ii-data-product">Part II: Data Product</h3>
 <p>For this data product, please add a feature (or several features) <em>specific to one or more of the activity types</em> in the OULAD interactions data, and then add these features to your model and evaluate the accuracy. How did the accuracy appreciably change–if at all? Please copy all of your code in one or more code chunks below.</p>
+<p><em>Reach</em>: Consider changing your model from a random forest to a <a href="https://parsnip.tidymodels.org/reference/boost_tree.html">boosted tree</a>, which can be even more performant (in terms of predictions) than random forests.</p>
 </section>
 <section id="knit-and-publish" class="level3">
 <h3 class="anchored" data-anchor-id="knit-and-publish">Knit and Publish</h3>
