update SML 1 conceptual overview

--- a/module-1/sml-1-conceptual-overview.html
+++ b/module-1/sml-1-conceptual-overview.html
@@ -333,36 +333,14 @@
 </div>
 
 </section>
-<section>
-<section id="purpose-and-agenda" class="title-slide slide level1 center">
-<h1>Purpose and Agenda</h1>
-
-</section>
-<section id="purpose" class="slide level2">
-<h2>Purpose</h2>
-<p>Machine learning is increasingly prevalent in our lives—and in educational contexts. Its role in educational research and practice is growing, albeit with some challenges and even controversy. These modules are designed to familiarize you with supervised machine learning and its applications in STEM education research. Throughout the module, we’ll explore four key questions that correspond to the focus of each of the four modules. By the end, you will have a deep understanding of the key characteristics of supervised machine learning and how to implement supervised machine learning workflows in R and Python.</p>
-<aside class="notes">
-<p>This is from the overview of the module – it is jsut a high-level overview of the topic.</p>
-<style type="text/css">
-        span.MJX_Assistive_MathML {
-          position:absolute!important;
-          clip: rect(1px, 1px, 1px, 1px);
-          padding: 1px 0 0 0!important;
-          border: 0!important;
-          height: 1px!important;
-          width: 1px!important;
-          overflow: hidden!important;
-          display:block!important;
-      }</style></aside>
-</section>
-<section id="agenda" class="slide level2">
-<h2>Agenda</h2>
+<section id="agenda" class="title-slide slide level1 center">
+<h1>Agenda</h1>
 <ul>
 <li>Purpose and Agenda</li>
 <li>Discussion 1</li>
 <li>Key Concept: Machine Learning</li>
-<li>Modules Overview</li>
 <li>Discussion 2</li>
+<li>Modules Overview</li>
 <li>Introduction to the other parts of this module</li>
 </ul>
 <aside class="notes">
@@ -378,8 +356,30 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</section></section>
+</section>
+
 <section>
+<section id="purpose-and-agenda" class="title-slide slide level1 center">
+<h1>Purpose and Agenda</h1>
+
+</section>
+<section id="purpose-all-modules" class="slide level2">
+<h2>Purpose (All Modules!)</h2>
+<p>Machine learning is increasingly prevalent in our lives—and in educational contexts. Its role in educational research and practice is growing, albeit with some challenges and even controversy. These modules are designed to familiarize you with supervised machine learning and its applications in STEM education research. Throughout the module, we’ll explore four key questions that correspond to the focus of each of the four modules. By the end, you will have a deep understanding of the key characteristics of supervised machine learning and how to implement supervised machine learning workflows in R and Python.</p>
+<aside class="notes">
+<p>This is from the overview of the module – it is jsut a high-level overview of the topic.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section></section>
 <section id="discussion-1" class="title-slide slide level1 center">
 <h1>Discussion 1</h1>
 <aside class="notes">
@@ -395,10 +395,10 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-<p>:::{.panel-tabset}</p>
-</section>
-<section id="getting-started" class="slide level2">
-<h2>Getting Started</h2>
+<div class="panel-tabset">
+<ul id="tabset-1" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-1-1">Getting Started</a></li><li><a href="#tabset-1-2">Digging Deeper</a></li></ul>
+<div class="tab-content">
+<div id="tabset-1-1">
 <ul>
 <li>Explain why are you interested in machine learning.</li>
 </ul>
@@ -415,11 +415,10 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</section>
-<section id="digging-deeper" class="slide level2">
-<h2>Digging Deeper</h2>
+</div>
+<div id="tabset-1-2">
 <ul>
-<li>Is there a specific use case of machine learning in which you are especially interested?</li>
+<li>Is there a specific use case of machine learning in which you are especially interested? Consider the data and purpose.</li>
 </ul>
 <aside class="notes">
 <p>Like the above, this is meant to elicit thoughts on SML - try to draw those out, or point out cases of unsupervised ML or regression and try to contrast those.</p>
@@ -434,7 +433,11 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</section></section>
+</div>
+</div>
+</div>
+</section>
+
 <section>
 <section id="key-concept-1" class="title-slide slide level1 center">
 <h1>Key Concept #1</h1>
@@ -553,9 +556,8 @@
 </ul>
 <p><strong>Traditional inferential statistics may be best</strong></p>
 </section>
-<section id="examples-of-machine-learning-in-stem-ed-research" class="slide level2">
-<h2>Examples of machine learning in STEM Ed Research</h2>
-<h3 id="example">Example</h3>
+<section id="example-of-machine-learning-in-stem-edu-research" class="slide level2">
+<h2>Example of machine learning in STEM Edu Research</h2>
 <p><strong>Combining best practices in assessment with supervised ML</strong></p>
 <blockquote>
 <p>Maestrales, S., Zhai, X., Touitou, I., Baker, Q., Schneider, B., &amp; Krajcik, J. (2021). Using machine learning to score multi-dimensional assessments of chemistry and physics. Journal of Science Education and Technology, 30(2), 239-254.</p>
@@ -564,26 +566,57 @@
 <li>Carrying out a careful process of qualitative coding (and the establishment of validity and interrater reliability) of students’ written constructed responses</li>
 <li>Training a supervised ML algorithm in advance of being able to <strong>scale up</strong> their coding to a larger number of responses</li>
 </ul>
-<p><strong>We’ll read this later, in module 3!</strong></p>
 </section></section>
+<section id="discussion-2" class="title-slide slide level1 center">
+<h1>Discussion 2</h1>
+<div class="panel-tabset">
+<ul id="tabset-2" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-2-1">Reflecting</a></li><li><a href="#tabset-2-2">Applying</a></li></ul>
+<div class="tab-content">
+<div id="tabset-2-1">
+<ul>
+<li>When might you use SML, in general?</li>
+</ul>
+</div>
+<div id="tabset-2-2">
+<ul>
+<li>Think back to the use case you mentioned earlier. How does (or could) SML be an appropriate technique to use?</li>
+</ul>
+</div>
+</div>
+</div>
+<aside class="notes">
+<p>This is meant to elicit thoughts from learners on SML, now that we are beginning to develop a language. Learners may mention research questions that sound like they could be answered using traditional inferential methods - lean into those discussions and be open to the possibility that interesting questions do <em>not</em> require SML, and use these conversations to try to shape inferential (i.e., those answerable with regression models and their extensions) questions into predictive (i.e., those answerable with SML) ones.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
+
 <section id="modules-overview" class="title-slide slide level1 center">
 <h1>Modules Overview</h1>
 <div class="panel-tabset">
-<ul id="tabset-1" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-1-1">Module 1</a></li><li><a href="#tabset-1-2">Module 2</a></li><li><a href="#tabset-1-3">Module 3</a></li><li><a href="#tabset-1-4">Module 4</a></li></ul>
+<ul id="tabset-3" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-3-1">Module 1</a></li><li><a href="#tabset-3-2">Module 2</a></li><li><a href="#tabset-3-3">Module 3</a></li><li><a href="#tabset-3-4">Module 4</a></li></ul>
 <div class="tab-content">
-<div id="tabset-1-1">
+<div id="tabset-3-1">
 <p><strong>SML Module 1: Foundations</strong></p>
 <p>How is prediction different from explanation? This lab provides a gentle introduction to supervised machine learning by drawing out similarities to and differences from a regression modeling approach. The case study will involve modeling the graduation rate across 1000s of higher education institutions in the United States using data from the Integrated Postsecondary Education Data System (IPEDS).</p>
 </div>
-<div id="tabset-1-2">
+<div id="tabset-3-2">
 <p><strong>SML Module 2: Workflows With Training and Testing Data</strong></p>
 <p>Building on the foundations from Lab 1, this session delves deeper into the workflows we will use when we are using a SML approach. Particularly, we’ll explore the roles of training and testing data and when to use them in a SML workflow. We’ll predict students’ withdrawal from a course using the Open University Learning Analytics Dataset (OULAD).</p>
 </div>
-<div id="tabset-1-3">
+<div id="tabset-3-3">
 <p><strong>SML Module 3: Interpreting SML Metrics</strong></p>
 <p>How is the interpretation of SML models different from more familiar models? In this lab, we’ll explore and work to understand the confusion matrix that can and the various metrics (e.g., precision, recall, PPV, NPV, F-score, and AUC) that are used to interpret how good at making dichotomous predictions SML models are. We’ll again use the OULAD, augmenting the variables we used in Lab 1, and we’ll introduce a more complex model—the random forest model—as an alternative to the regression models used in previous labs.</p>
 </div>
-<div id="tabset-1-4">
+<div id="tabset-3-4">
 <p><strong>SML Module 4: Improving Predictions Through Feature Engineering</strong></p>
 <p>How can we improve our predictions? This lab introduces the concept of feature engineering to enhance model performance. We’ll explore techniques for creating new variables and refining existing ones to improve prediction accuracy. We also explore cross-validation to revise and refine our model without biasing its predictions. We’ll work with the finest-grained OULAD data—interaction data—to demonstrate key feature engineering steps.</p>
 </div>
@@ -604,44 +637,17 @@
       }</style></aside>
 </section>
 
-<section id="discussion-2" class="title-slide slide level1 center">
-<h1>Discussion 2</h1>
-<div class="panel-tabset">
-<ul id="tabset-2" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-2-1">Reflecting</a></li><li><a href="#tabset-2-2">Applying</a></li></ul>
-<div class="tab-content">
-<div id="tabset-2-1">
-<ul>
-<li>When might you use SML?</li>
-</ul>
-</div>
-<div id="tabset-2-2">
-<ul>
-<li>What is a research question you could ask that could be approached with SML?</li>
-</ul>
-</div>
-</div>
-</div>
-<aside class="notes">
-<p>This is meant to elicit thoughts from learners on SML, now that we are beginning to develop a language. Learners may mention research questions that sound like they could be answered using traditional inferential methods - lean into those discussions and be open to the possibility that interesting questions do <em>not</em> require SML, and use these conversations to try to shape inferential (i.e., those answerable with regression models and their extensions) questions into predictive (i.e., those answerable with SML) ones.</p>
-<style type="text/css">
-        span.MJX_Assistive_MathML {
-          position:absolute!important;
-          clip: rect(1px, 1px, 1px, 1px);
-          padding: 1px 0 0 0!important;
-          border: 0!important;
-          height: 1px!important;
-          width: 1px!important;
-          overflow: hidden!important;
-          display:block!important;
-      }</style></aside>
-</section>
+<section>
+<section id="other-parts-of-this-module" class="title-slide slide level1 center">
+<h1>Other parts of this module</h1>
 
-<section id="introduction-to-the-other-parts-of-this-module" class="title-slide slide level1 center">
-<h1>Introduction to the other parts of this module</h1>
+</section>
+<section id="overview" class="slide level2">
+<h2>Overview</h2>
 <div class="panel-tabset">
-<ul id="tabset-3" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-3-1">Readings</a></li><li><a href="#tabset-3-2">Case Study</a></li><li><a href="#tabset-3-3">Badge</a></li></ul>
+<ul id="tabset-4" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-4-1">Readings</a></li><li><a href="#tabset-4-2">Case Study</a></li><li><a href="#tabset-4-3">Badge</a></li></ul>
 <div class="tab-content">
-<div id="tabset-3-1">
+<div id="tabset-4-1">
 <p><strong>Please see <code>sml-1-readings.qmd</code></strong></p>
 <blockquote>
 <p>Brooks, C., &amp; Thompson, C. (2017). Predictive modelling in teaching and learning. Handbook of learning analytics, 61-68.</p>
@@ -653,17 +659,17 @@
 <p>Zong, C., &amp; Davis, A. (2022). Modeling university retention and graduation rates using IPEDS. Journal of College Student Retention: Research, Theory &amp; Practice, 15210251221074379.</p>
 </blockquote>
 </div>
-<div id="tabset-3-2">
+<div id="tabset-4-2">
 <p><strong>Please see <code>sml-1-case-study.qmd</code></strong></p>
 <ul>
-<li>Building a prediction model for graduate rates using data from the National Center for Education Statistics.</li>
+<li>Building a prediction model for graduate rates using data from National Center for Education Statistics data — IPEDS&lt; specifically</li>
 <li>We’ll use not only the same <em>data</em> but also the same <em>model</em> in two modes - inferential regression modeling and predicitive SML, seeing how the key is in how we use the model, not the model type</li>
 <li>Work with peers to complete this, reading the text, following links to resources (and the reading), and then completing the required 👉 Your Turn ⤵ tasks</li>
 <li>A key is available, but we strongly encourage you to use it only at the end to check your work, or if you are completely stuck and have tried our recommended troubleshooting steps: https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit</li>
 </ul>
 </div>
-<div id="tabset-3-3">
-<p><strong>Please see <code>sml-badge.qmd</code></strong></p>
+<div id="tabset-4-3">
+<p><strong>Please see <code>sml-1-badge.qmd</code></strong></p>
 <ul>
 <li>Involves applying what you have done through this point in the module to a) extending our model and b) reflecting and planning, after which you will knit and submit your work by publishing to Posit Cloud.</li>
 </ul>
@@ -671,10 +677,11 @@
 </div>
 </div>
 </section>
-
-<section>
-<section id="troubleshooting-and-setup" class="title-slide slide level1 center">
-<h1>Troubleshooting and setup</h1>
+<section id="troubleshooting-and-setup" class="slide level2">
+<h2>Troubleshooting and setup</h2>
+</section>
+<section id="troubleshooting" class="slide level2">
+<h2>Troubleshooting</h2>
 <ul>
 <li>Please view <a href="https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit">this Google doc</a></li>
 <li>Change default settings: Tools -&gt; Global Settings -&gt; Workspace -&gt; DO NOT restore workspace</li>
