--- a/module-1/sml-1-conceptual-overview.html
+++ b/module-1/sml-1-conceptual-overview.html
@@ -527,8 +527,21 @@
 </ul></li>
 </ul>
 </section>
-<section id="which-technique-should-i-choose" class="slide level2">
-<h2>Which technique should I choose?</h2>
+<section id="unsupervised-ml" class="slide level2">
+<h2>Unsupervised ML</h2>
+<ul>
+<li>Does not require coded data; one way to think about unsupervised ML is that its purpose is to discover codes/labels</li>
+<li>Can be used in an <em>exploratory mode</em> (see <a href="https://journals.sagepub.com/doi/full/10.1177/0049124118769114?casa_token=EV5XH31qbyAAAAAA%3AFg09JQ1XHOOzlxYT2SSJ06vZv0jG-s4Qfz8oDIQwh2jrZ-jrHNr7xZYL2FwnZtZiokhPalvV1RL2Bw">Nelson, 2020</a>)</li>
+<li><strong>Warning</strong>: The results of unsupervised ML <em>cannot</em> directly be used to provide codes/outcomes for supervised ML techniques</li>
+<li>Algorithms include:
+<ul>
+<li>Cluster analysis and Latent Profile Analysis</li>
+<li><a href="https://web.stanford.edu/~hastie/ElemStatLearn/">Principle Components Analysis (really!)</a></li>
+</ul></li>
+</ul>
+</section></section>
+<section id="what-technique-should-i-choose" class="title-slide slide level1 center">
+<h1>What technique should I choose?</h1>
 <p>Do you have coded data or data with a known outcome – let’s say about K-12 students – and, do you want to:</p>
 <ul>
 <li><em>Predict</em> how other students with similar data (but without a known outcome) perform?</li>
@@ -537,8 +550,10 @@
 </ul>
 <p><strong>Supervised methods may be your best bet</strong></p>
 </section>
-<section id="which-technique-should-i-choose-1" class="slide level2">
-<h2>Which technique should I choose?</h2>
+
+<section>
+<section id="what-technique-should-i-choose-1" class="title-slide slide level1 center">
+<h1>What technique should I choose?</h1>
 <p>Do you not yet have codes/outcomes – and do you want to?</p>
 <ul>
 <li><em>Achieve a starting point</em> for qualitative coding, perhaps in a <a href="https://journals.sagepub.com/doi/full/10.1177/0049124117729703">“computational grounded theory”</a> mode?</li>
@@ -547,17 +562,17 @@
 </ul>
 <p><strong>Unsupervised methods may be helpful</strong></p>
 </section>
-<section id="which-technique-should-i-choose-2" class="slide level2">
+<section id="which-technique-should-i-choose" class="slide level2">
 <h2>Which technique should I choose?</h2>
 <p>Do you want to say something about one or several variables’ relations with an outcome?</p>
 <ul>
 <li>Understand whether an intervention was effective</li>
 <li>See how one or more variables relates to an outcome</li>
 </ul>
-<p><strong>Traditional inferential statistics may be best</strong></p>
+<p><strong>Traditional, inferential statistics <em>i.e., regression</em> may be best</strong></p>
 </section>
-<section id="example-of-machine-learning-in-stem-edu-research" class="slide level2">
-<h2>Example of machine learning in STEM Edu Research</h2>
+<section id="example-of-supervised-machine-learning-in-stem-ed-research" class="slide level2">
+<h2>Example of supervised machine learning in STEM Ed Research</h2>
 <p><strong>Combining best practices in assessment with supervised ML</strong></p>
 <blockquote>
 <p>Maestrales, S., Zhai, X., Touitou, I., Baker, Q., Schneider, B., &amp; Krajcik, J. (2021). Using machine learning to score multi-dimensional assessments of chemistry and physics. Journal of Science Education and Technology, 30(2), 239-254.</p>
