--- a/module-2/sml-2-conceptual-overview.html
+++ b/module-2/sml-2-conceptual-overview.html
@@ -450,16 +450,25 @@
 <section id="training-and-testing" class="slide level2">
 <h2>Training and testing</h2>
 <div class="panel-tabset">
-<ul id="tabset-3" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-3-1">Predictions</a></li><li><a href="#tabset-3-2">Train vs.&nbsp;test</a></li><li><a href="#tabset-3-3">Strata</a></li></ul>
+<ul id="tabset-3" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-3-1">Algorithms</a></li><li><a href="#tabset-3-2">Predictions</a></li><li><a href="#tabset-3-3">Train vs.&nbsp;test</a></li><li><a href="#tabset-3-4">How does this avoid bias?</a></li><li><a href="#tabset-3-5">Strata</a></li></ul>
 <div class="tab-content">
 <div id="tabset-3-1">
+<ul>
+<li>Algorithms (or estimation procedures - or <em>models</em>) refer to the <em>structure</em> and <em>process</em> of estimating the <em>parameters</em> of a model</li>
+<li>This definition provides a wide range of options for what kinds of algorithms we use (from simple to very complex, as we discuss in a later learning lab)</li>
+<li>For now, we focus on a familiar, easy to interpret algorithm (e.g., <a href="https://dl.acm.org/doi/abs/10.1145/3448139.3448154?casa_token=skmk5XGbDOUAAAAA:Z0Kl4nyjpOGFA6RuFTiiLWaC_KxH1vkQ72Kr0hetXcumRdvu8tPYlCX12AgHr9aS0Fp3L-Uu0p4">1</a>, also <a href="https://linkinghub.elsevier.com/retrieve/pii/S0895435618310813">this</a>), <em>logistic regression</em></li>
+<li>This is a linear model with a binary (<em>“yes”</em> or <em>“no”</em>) outcome</li>
+<li>It will be a <em>bad model</em> to start us off!</li>
+</ul>
+</div>
+<div id="tabset-3-2">
 <ul>
 <li>When doing supervised ML, we focus on predicting an outcome: how well we do this overall and for particular cases (more on how in the next learning lab)</li>
 <li>We <em>do not</em> focus on inference or explanation (i.e., an “explanatory” model): model fit, statistical significance, effect sizes, etc.</li>
 <li><strong>This is a really key difference – we use different metrics to evaluate what makes for a good model</strong></li>
 </ul>
 </div>
-<div id="tabset-3-2">
+<div id="tabset-3-3">
 <ul>
 <li>A key concept in the context of supervised machine learning is training vs.&nbsp;testing data:</li>
 <li>Training data: Data we use to <strong>fit</strong> (or train, AKA estimate) a supervised machine learning <strong>model</strong> (AKA algorithm)</li>
@@ -467,7 +476,16 @@
 <li>By splitting out data into training and testing <em>sets</em>, we can obtain unbiased metrics for how good our model is at predicting</li>
 </ul>
 </div>
-<div id="tabset-3-3">
+<div id="tabset-3-4">
+<ul>
+<li>If we used only one data set (i.e., only training data) we could fit a model that does a <em>really good</em> job of making predictions</li>
+<li>But, this model would likely be <em>overfit</em> — a model that is too tailored to the specific data in our training set, rather than a model that can be more <em>generalizable</em></li>
+<li>The big picture, very real risk of not using training and testing data is we think we have a better model than we do</li>
+<li>We could fit a model that <em>perfectly</em> predicts every outcome in our training data, but when the model sees new (i.e., different) data, it performs very poorly</li>
+<li>This is <strong>essential</strong> for supervised machine learning; if you review or see a study that only uses a single data set, be skeptical of the prediction metrics!</li>
+</ul>
+</div>
+<div id="tabset-3-5">
 <ul>
 <li>It is often valuable to conduct a <em>stratified</em> split, based on the proportion or distribution of the dependent variables’ values in the dataset
 <ul>
@@ -512,7 +530,7 @@
 </div>
 <div id="tabset-5-2">
 <ul>
-<li>Building a prediction model for students passing the classbased just on student data.</li>
+<li>Building a prediction model for students passing the class based just on student data.</li>
 <li>Work with peers to complete this, reading the text, following links to resources (and the reading), and then completing the required 👉 Your Turn ⤵ tasks</li>
 <li>A key is available, but we strongly encourage you to use it only at the end to check your work, or if you are completely stuck and have tried our recommended troubleshooting steps: https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit</li>
 </ul>
